add markdown rendering and canonical element, fix scrollbar realted layout shift

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -13,11 +13,16 @@
   "exclude": ["**/_fresh/*"],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "@deno/gfm": "jsr:@deno/gfm@^0.10.0",
     "@giscus/react": "npm:@giscus/react@^3.1.0",
     "@preact/signals": "npm:@preact/signals@^2.0.1",
     "@preact/signals-core": "npm:@preact/signals-core@^1.8.0",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
-    "preact": "npm:preact@^10.26.2"
+    "@std/front-matter": "jsr:@std/front-matter@^1.0.8",
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "marked-smartypants": "npm:marked-smartypants@^1.1.9",
+    "preact": "npm:preact@^10.26.2",
+    "prismjs": "npm:prismjs@1.29.0"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" }
 }
