--- a/deno.jsonc
+++ b/deno.jsonc
@@ -20,6 +20,7 @@
     "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
     "@std/front-matter": "jsr:@std/front-matter@^1.0.8",
     "@std/path": "jsr:@std/path@^1.0.8",
+    "feed": "npm:feed@^4.2.2",
     "marked-smartypants": "npm:marked-smartypants@^1.1.9",
     "preact": "npm:preact@^10.26.2",
     "prismjs": "npm:prismjs@1.29.0",
