--- a/deno.jsonc
+++ b/deno.jsonc
@@ -13,8 +13,10 @@
   "exclude": ["**/_fresh/*"],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "@cronitorio/cronitor-rum": "npm:@cronitorio/cronitor-rum@^0.4.1",
     "@deno/gfm": "jsr:@deno/gfm@^0.10.0",
     "@giscus/react": "npm:@giscus/react@^3.1.0",
+    "@microsoft/clarity": "npm:@microsoft/clarity@^1.0.0",
     "@preact/signals": "npm:@preact/signals@^2.0.1",
     "@preact/signals-core": "npm:@preact/signals-core@^1.8.0",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
