fix: clone repo before printing resume

--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+
       - name: html to pdf
         uses: fifsky/html-to-pdf-action@master
         with:
