--- a/deno.jsonc
+++ b/deno.jsonc
@@ -9,6 +9,7 @@
   "lint": { "rules": { "tags": ["fresh", "recommended"] } },
   "exclude": ["**/_fresh/*"],
   "imports": {
+    "@atcute/client": "npm:@atcute/client@^4.0.3",
     "@deno/gfm": "jsr:@deno/gfm@^0.10.0",
     "@giscus/react": "npm:@giscus/react@^3.1.0",
     "@preact/signals": "npm:@preact/signals@^2.0.4",
@@ -19,6 +20,7 @@
     "marked-smartypants": "npm:marked-smartypants@^1.1.9",
     "preact": "npm:preact@^10.26.6",
     "prismjs": "npm:prismjs@1.29.0",
+    "react-icons": "npm:react-icons@^5.5.0",
     "rss": "npm:rss@^1.2.2",
     "fresh": "jsr:@fresh/core@^2.0.0-alpha.34"
   },
